--- a/examples/parallax/index.html
+++ b/examples/parallax/index.html
@@ -12,7 +12,9 @@
 <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-<header>Parallax Scrolling Demo</header>
+<a href="http://www.ogaoga.org/">
+  <header>Parallax Scrolling Demo</header>
+</a>
 <div id="wrapper">
 	<div id="scroller">
     <div class="rainbow b1"></div>
@@ -22,6 +24,7 @@
     <div class="rainbow b5"></div>
     <div class="rainbow b6"></div>
     <div class="rainbow b7"></div>
+    <div class="signature">Created by <a href="https://twitter.com/ogaoga">@ogaoga</a></div>
 	</div>
 </div>
 <div id="footer"></div>
