--- a/examples/parallax/index.html
+++ b/examples/parallax/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" media="all" href="style.css" />
 </head>
 <body>
-<a href="http://www.ogaoga.org/">
+<a href="http://www.ogaoga.org/?p=694">
   <header>Parallax Scrolling Demo</header>
 </a>
 <div id="wrapper">
