--- a/examples/parallax/index.html
+++ b/examples/parallax/index.html
@@ -17,6 +17,7 @@
 </a>
 <div id="wrapper">
 	<div id="scroller">
+    <div class="guide">Scroll down<br /><br />V<br />V<br />V</div>
     <div class="rainbow b1"></div>
     <div class="rainbow b2"></div>
     <div class="rainbow b3"></div>
@@ -24,7 +25,7 @@
     <div class="rainbow b5"></div>
     <div class="rainbow b6"></div>
     <div class="rainbow b7"></div>
-    <div class="signature">Created by <a href="https://twitter.com/ogaoga">@ogaoga</a></div>
+    <div class="signature"><a href="http://www.ogaoga.org/?p=694">Back to blog</a><br /><br />By ogaoga</div>
 	</div>
 </div>
 <div id="footer"></div>
