--- a/examples/parallax/index.html
+++ b/examples/parallax/index.html
@@ -17,7 +17,7 @@
 </a>
 <div id="wrapper">
 	<div id="scroller">
-    <div class="guide">Scroll down<br /><br />V<br />V<br />V</div>
+    <div class="guide">^<br />^<br />^<br /><br />Scroll</div>
     <div class="rainbow b1"></div>
     <div class="rainbow b2"></div>
     <div class="rainbow b3"></div>
